Add reset button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <h1>Etch-a-sketch</h1>
-    <button>Click me!</button>
+    <div class="btns-container">
+      <button>Choose grid size</button>
+      <button>Reset</button>
+    </div>
     <div class="grid-container"></div>
   </body>
 </html>
